# RAG_From_Scratch

./: pyproject.toml  requirements.txt
data/excel/: leads_2025-10-26_12-56-30.xlsx
data/vector_store/: chroma.sqlite3
data/vector_store/0fe50a66-ae01-4b00-a988-a693cc2bdbe9/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
